add css c style to the first div

--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
 <body>
     <h1>I ❤ javaScript</h1>
 
+    
+        <div class="top">
+             <div class="date-container">
+                <input type="date" id="date" name="date">
+                <i class="fas fa-calendar icon"></i>
+                <button class="btn">Calculate</button>
+            </div>
+            
+        </div>
+
 
 
 
