--- a/index.html
+++ b/index.html
@@ -16,8 +16,16 @@
                 <i class="fas fa-calendar icon"></i>
                 <button class="btn">Calculate</button>
             </div>
+
+
             
         </div>
+
+        <div class="buttons">
+            <button onclick="calculateDifference('days')">Calculate Days</button>
+            <button onclick="calculateDifference('months')">Calculate Months</button>
+            <button onclick="calculateDifference('years')">Calculate Years</button>
+           </div>
 
 
 
